add button google connect

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,7 +59,7 @@
 
         <div class="container">
             <div class="row" style="padding:12px">
-                <a style="width:100%" href="http://www.mybestteam.dev/jdlx/view/inscription.php" class="btn btn-raised btn-primary">S'inscrire avec Gmail</a>
+                <a style="width:100%" href="{{ path('login_google')}}" class="btn btn-raised btn-primary">S'inscrire avec Gmail</a>
 
 
 
