--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,8 +16,8 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Bootstrap Material Design -->
-    <link href="vendor/bootstrap-material-design-master/dist/css/bootstrap-material-design.css" rel="stylesheet">
-    <link href="vendor/bootstrap-material-design-master/dist/css/ripples.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap-material-design-master/dist/css/bootstrap-material-design.css" rel="stylesheet">
+    <link href="/vendor/bootstrap-material-design-master/dist/css/ripples.min.css" rel="stylesheet">
 
 
     <link href="//fezvrasta.github.io/snackbarjs/dist/snackbar.min.css" rel="stylesheet">
@@ -73,20 +73,17 @@
                             <div class="form-group label-floating">
                                 <label class="control-label" for="focusedInput2">Prénom</label>
                                 <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
                             </div>
 
 
                             <div class="form-group label-floating">
                                 <label class="control-label" for="focusedInput2">Nom</label>
                                 <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
                             </div>
 
                             <div class="form-group label-floating">
                                 <label class="control-label" for="focusedInput2">Email</label>
                                 <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
                             </div>
 
 
@@ -139,12 +136,21 @@
         })();
 
     </script>
-    <script src="vendor/bootstrap-material-design-master/dist/js/ripples.min.js"></script>
-    <script src="vendor/bootstrap-material-design-master/dist/js/material.min.js"></script>
+    <script src="/vendor/bootstrap-material-design-master/dist/js/ripples.min.js"></script>
+    <script src="/vendor/bootstrap-material-design-master/dist/js/material.min.js"></script>
     <script src="//fezvrasta.github.io/snackbarjs/dist/snackbar.min.js"></script>
 
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js"></script>
+
+
+    <script>
+    $(function () {
+        $.material.init();
+        $(".shor").noUiSlid
+    })
+
+</script>
 
 </body>
 </html>
