--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="asset/style.css">
+    <link rel="stylesheet" href="asset/override.css">
 
 </head>
 <body>
@@ -60,6 +61,7 @@
         <div class="container">
             <div class="row" style="padding:12px">
                 <a style="width:100%" href="{{ path('login_google')}}" class="btn btn-raised btn-primary">S'inscrire avec Gmail</a>
+
 
 
 
@@ -96,6 +98,11 @@
                         </fieldset>
                     </form>
                 </div>
+
+
+
+
+
 
 
 
