--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,54 +58,7 @@
 
 
         <div class="container">
-            <div class="row" style="padding:12px">
-                <a style="width:100%" href="{{ path('login_google')}}" class="btn btn-raised btn-primary">S'inscrire avec Gmail</a>
-
-
-
-                <div class="bs-component" style="padding: 20px">
-                    <form class="form-horizontal"method="post" action="">
-                        <fieldset>
-
-
-
-
-                            <div class="form-group label-floating">
-                                <label class="control-label" for="focusedInput2">Prénom</label>
-                                <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
-                            </div>
-
-
-                            <div class="form-group label-floating">
-                                <label class="control-label" for="focusedInput2">Nom</label>
-                                <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
-                            </div>
-
-                            <div class="form-group label-floating">
-                                <label class="control-label" for="focusedInput2">Email</label>
-                                <input class="form-control" id="focusedInput2" type="text">
-                                <p class="help-block">You should really write something here</p>
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <div class="col-md-12" style="text-align:center">
-                                    <button type="submit" class="btn btn-raised btn-primary">Inscription</button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-
-
-
-
-
-
-            </div>
+            {% block content %}{% endblock %}
         </div>
 
 
