--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 
-    <title>Bootstrap Material</title>
+    <title>My Best Team</title>
 
     <!-- Material Design fonts -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
@@ -51,7 +51,7 @@
 
         <div class="row">
             <div class="col-md-12" style="text-align:center">
-                <h1 id="buttons">My Best Team</h1>
+                <img src="/public/images/logo.png" title="logo My Best team" style="width:350px"/>
             </div>
         </div>
 
