--- a/web/asset/override.css
+++ b/web/asset/override.css
@@ -1,3 +1,8 @@
 .btn.btn-raised.btn-primary, .input-group-btn .btn.btn-raised.btn-primary, .btn.btn-fab.btn-primary, .input-group-btn .btn.btn-fab.btn-primary, .btn-group-raised .btn.btn-primary, .btn-group-raised .input-group-btn .btn.btn-primary {
     background-color: #e64215
 }
+
+
+.thumbnail {
+
+}
