add search form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,6 +59,7 @@
 
 
         <div class="container">
+            {% block header %}{% endblock %}
             {% block content %}{% endblock %}
         </div>
 
