--- a/app/Resources/views/default/profile-list.html.twig
+++ b/app/Resources/views/default/profile-list.html.twig
@@ -1,10 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'default/profile-base.html.twig' %}
 
 {% block content %}
-    <form method="GET" action="{{ url('user:profile:list') }}">
-        <input type="text" name="query" value="{{ query }}">
-        <button type="submit">Rechercher</button>
-    </form>
     <div class="wrapper">
 
         <div class="jcarousel-wrapper">
