--- a/app/Resources/views/default/profile-update.html.twig
+++ b/app/Resources/views/default/profile-update.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'default/profile-base.html.twig' %}
 
 {% block content %}
     <h2>{{ user.firstname }} {{ user.lastname }}</h2>
