--- a/app/Resources/views/default/profile-view.html.twig
+++ b/app/Resources/views/default/profile-view.html.twig
@@ -1,20 +1,34 @@
 {% extends 'default/profile-base.html.twig' %}
 
 {% block content %}
-    {% if user.thumbnail %}
-    <img src="{{ asset('uploads/thumbnail/' ~ user.thumbnail) }}" style="max-width: 80%;"/>
+    <div class="col-md-12" style="text-align:center; font-size:18px; font-weight: bold">
+        {% if user.thumbnail %}
+        {% set isAbsolu = user.thumbnail|slice(0, 5) %}
+            <div class="col-md-12" style="text-align:center">
+                {% if isAbsolu != 'https' %}
+                <img src="{{ asset('uploads/thumbnail/' ~ user.thumbnail) }}" style="width: 200px; border-radius:50%"/>
+                {% else %}
+                <img src="{{ user.thumbnail }}" style="width: 200px; border-radius:50%"/>
+                {% endif %}
+            </div>
         {% endif %}
-    {{ user.email }}
-    {{ user.firstname }}
-    {{ user.lastname }}
+        <span style="color:#e64215">{{ user.firstname | title }}</span>&nbsp;<span style="color:#000000">{{ user.lastname | title }}</span>
+        <br/>
+        <span style="color:#000000">{{ user.job | title }} , {{ user.unit | title }}</span>
+        <br/><br/>
 
-    <ul>
-        {% for tag in user.tagsArray %}
-            <li>{{ tag }}</li>
-        {% else %}
-            <li>Aucun tag séléctionné</li>
-        {% endfor %}
-    </ul>
+    </div>
+    <div class="col-md-12" style="text-align:center">
+            {% for tag in user.tagsArray %}
+                <p style="display:inline-block; border-radius: 50%; background-color: #363434; font-weight:bold; color:#ffffff; height:50px; line-height:3; width: 150px;">{{ tag | title }}</p>
+            {% else %}
+                <p>Aucun tag séléctionné</p>
+            {% endfor %}
+    </div>
 
+    <div class="col-md-12" style="text-align:center">
+        <h2><span style="color:#e64215">Où</span>&nbsp;<span style="color:#000000">me trouver ?</span></h2>
+        <p>{{ user.position | title }}</p>
+    </div>
     <a href="{{ url("profile:update", {'id': user.id}) }}" target="_blank" >Mise à jour</a>
 {% endblock %}
