--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -55,7 +55,7 @@
 
 
         <div class="row">
-            <div class="col-md-6 col-md-offset-3" style="">
+            <div class="col-md-6 col-md-offset-3" style="text-align:center">
 
 
 
@@ -63,7 +63,7 @@
 
 
 
-                <div class="container">
+                <div class="">
                     {% block header %}{% endblock %}
                     {% block content %}{% endblock %}
                 </div>
